--- a/intro.html
+++ b/intro.html
@@ -2,7 +2,7 @@
   <h1>Drought Severity Assessment Tool</h1>
   <p>A Decision Support Tool</p>
   <p>
-  	<a class="btn btn-info btn-lg" href="manual.pdf">
+  	<a class="btn btn-info btn-lg" href="manual.pdf" download>
   	User's Manual
   	</a>
   </p>
